<resources>
    <string name="app_name">PlantGenius</string>
    <string name="text_splash">Plant Genius Apps akan membantu Anda dalam menganalisis keadaan dari tanaman Anda secara akurat dan temukan solusi terbaik dari penyakit tanaman Anda</string>

    <string name="plant_genius">Plant Genius</string>
    <string name="result_detect">HASIL DETEKSI</string>
    <string name="description">Dekripsi</string>
    <string name="detail">Detail</string>

    <string name="disease_name">Nama Penyakit</string>
    <string name="description_disease">Deskripsi Penyakit</string>
    <string name="treatment_disease">Cara Mengatasi</string>
    <string name="check_again">Cek lagi</string>

    <string name="back_button">Tombol kembali</string>
    <string name="create_acc">Buat Akun</string>
    <string name="signup">Sign Up</string>

    <string name="login">Login</string>
    <string name="login_desc">Silahkan login terlebih dahulu</string>
    <string name="no_have_acc">Belum punya akun?</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>

    <string name="errorPhoto">Gagal mengambil gambar</string>
    <string name="errorCamera">Tidak dapat membuka kamera</string>
    <string name="takePicture">Ambil gambar</string>
    <string name="camera">Kamera</string>

    <string name="gallery">Galeri</string>
    <string name="choose_image">Silahkan pilih gambar Tanaman Anda!</string>
    <string name="check_image">Cek kondisi Tanaman Anda Sekarang Juga!</string>
    <string name="detection">DETEKSI</string>

    <string name="five_history">5 RIWAYAT DETEKSI ANDA</string>
    <string name="subscribe_desc">Jika Anda ingin mendeteksi tanaman yang lebih banyak silahkan BERLANGGANAN sekarang juga dan dapatkan semua FITUR dari Aplikasi kami!</string>
    <string name="subscribe">LANGGANAN SEKARANG!</string>
    <string name="noHistory">History Anda masih kosong</string>

    <string name="home_desc">Plant Genius Apps akan membantu Anda dalam menganalisis keadaan dari tanaman Anda secara akurat dan temukan solusi terbaik dari penyakit tanaman Anda.</string>
    <string name="scan_now">Scan now!</string>
    <string name="top_plant">INFORMASI PENTING</string>

    <string name="plant">PLANT</string>
    <string name="genius">GENIUS 1.0</string>
    <string name="email_profile">userplantgenius@gmail.com</string>
    <string name="logout">Logout</string>

    <string name="invalid_name">Nama tidak boleh kosong</string>
    <string name="invalid_nameNumber">Tidak boleh ada angka atau simbol</string>
    <string name="invalid_email">Masukan email dengan benar</string>
    <string name="invalid_password">Minimal 6 karakter, berisi huruf dan angka</string>

    <string name="getPermission">Permission didapatkan</string>
    <string name="noPermission">Tidak mendapatkan Permission</string>
    <string name="coming_soon">Fitur Ini Akan Segera Hadir</string>
    <string name="noImage">Masukan gambar terlebih dahulu</string>

    <string name="accCreated">Pendaftaran berhasil</string>
    <string name="failServer">Gagal menghubungkan ke Server</string>
    <string name="anError">Terjadi Kesalahan</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

</resources>